Replace letter content with a placeholder message
Updated the content of the letter in letter.html.

--- a/letter.html
+++ b/letter.html
@@ -14,24 +14,11 @@
     <h1>A Message For You 💌</h1>
     
     <div class="letter-box">
-      <p>Hi baby,</p>
-      <p>
-      Today marks 5 months of us! 153 days, 3,672 hours, 220,320 minutes, 13,219,200 seconds, since I started calling you 'babe' and I consider myself the luckiest man ever for that, being your man.
-      </p>
-      <p>
-      I know what you’re thinking, it’s just a “monthsary” or whatever it’s called but I just had this dopamine rush and wanted to do something special for the most special person in my life. So bare it with me. 
-      </p>
-      <p>
-      Since we first met, or even started talking, I’m not gonna say that I knew we’d come this far but it definitely felt like you were the one if any person would get along with me all the way. And now, everything you do, every hair flip, every smile, even ur scary attitude makes me swoon. I wanted to make this for you (and myself for some skill furnishing), something simple but from my imagination onto your browser, most of these ideas were gathered in the shower tbh. 
-      </p>
-      <p>
-      You’re my favorite person, and I’ll always be grateful for you being in my life. Can’t wait to create more stories, memories and smiles with you, ilyyy and happy 5 months!
-      </p>
-      <p>With alottt of love,</p>
-      <p><em>— Your nerdy bf 💖</em></p>   
+      <p>Your message here</p>
     </div>
 
     <button class="pretty-button" onclick="goTo('end.html')">Continue ➜</button>
   </div>
 </body>
 </html>
+
